# order-platform-msa-train-pipeline

./: .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  fastapi_request.json  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: airflow.cfg  config.yaml  webserver_config.yaml
dags/: chronos_train_dag.py  chronos_train_dag_mac.py  chronos_train_dag_no_mlflow_bucket.py  chronos_train_dag_no_mlflow_bucket_backup.py  chronos_train_dag_no_mlflow_mloperator.py  example_dag.py  ml_pipeline_dag.py  preprocess.py  preprocess_dag.py  preprocess_raw_data_dag.py  simplest_dag.py  train_no_mlflow_9.14.py  train_no_mlflow_9.16_final.py
data/: forecast_data_featured.csv.dvc
notebooks/: check_torch.py  data_analysis.ipynb  fastapi_request.py  forecasting_chronos.ipynb  generate_simulated_data.py  local_train.py  order_bot.py  train.py
scripts/: ci.sh  docker-compose-run.sh  start-airflow.sh  train.py  update_data.sh
tests/: test_train.py
